# Near-lang

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.cpp
crates/errors/src/: lib.rs
crates/main/src/: main.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: lib.rs  main.rs
crates/token/src/: lib.rs
include/: stringSplit.hpp  stringTrim.hpp
src/: generator.cpp  main.cpp
src/Error/: errorHandler.cpp  errorHandler.hpp
src/Scanner/: Scanner.cpp  Scanner.hpp
src/Stream/: fileStream.cpp  filestream.hpp
src/Token/: Token.hpp  TokenType.hpp  token.cpp  token.hpp
src/Tool/: generateAst.cpp  generateAst.hpp  generator.cpp
